update ci workflow to install lein before running tests

--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -8,12 +8,25 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Install dependencies
-      run: lein deps
-    - name: Run tests
-      run: lein test
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Install Clojure tools (Leiningen)
+        uses: DeLaGuardo/setup-clojure@13.4
+        with:
+          lein: 'latest'
+
+      - name: Install dependencies
+        run: lein deps
+
+      - name: Run tests
+        run: lein test
